--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
-    background: url("https://wallpaperboat.com/wp-content/uploads/2020/09/14/54601/books-05.jpg") center center no-repeat;
-    background-size: cover;
+    background-color:#92a1cf   
     
 }
 
@@ -13,10 +12,12 @@ body {
 header {
     background-color: #333;
     color: white;
-    padding: 10px;
+    justify-content:center;
     display: flex;
     align-items: center;
+    height:90px;
 }
+
 
 .header-container {
     display: flex;
@@ -32,7 +33,7 @@ header {
 .drawer-icon {
     font-size: 30px;
     cursor: pointer;
-    margin-left: auto;
+    margin-left: 1px;
     margin-right: 20px;
 }
 
